@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURL_SOCKOPT_* constants (libcurl 7.21.5+).
+
         * Added CURL_HTTP_VERSION_2_0, CURL_HTTP_VERSION_2 and
           CURL_HTTP_VERSION_2TLS constants for CURLOPT_HTTP_VERSION
           (various libcurl versions required for these).
